trying to fix project 4 overflow issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -33,6 +33,7 @@ body {
   width: 100%;
   height: 100vh;
   overflow-y: scroll;
+  overflow-x: hidden;
   // padding: 3rem 0 0;
   padding-bottom: 5rem;
   z-index: 10;
